kubernetes/ingress/ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mynginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mynginx.cmcm.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
