kubernetes/ingress/ingress-tomcat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mytomcat
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mytomcat.cmcm.com
    http:
      paths:
      - backend:
          serviceName: tomcat-service
          servicePort: 8080
